--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="
+<img src="Tomatoes_Own_Rev1.jpg">
 <h1>Tomatoes Own</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
