--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Tomatoes Own</title>
+</head>
 <body>
 <img src="Tomatoes_Own_Rev1.jpg">
 <h1>Tomatoes Own</h1>
