--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Tomatoes Own</title>
 </head>
 <body>
-<img src="Tomatoes_Own_Rev1.jpg">
+<img src="Tomatoes_Own_Rev1.jpg" align="middle">
 <h1>Tomatoes Own</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
