--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>Tomatoes Own</title>
 </head>
 <body>
-<img src="Tomatoes_Own_Rev1.jpg" align="middle">
+<p style="text-align:center;">
+    <img src="Tomatoes_Own_Rev1.jpg" align="middle">
+    </p>
 <h1>Tomatoes Own</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
