--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>Tomatoes Own</title>
 </head>
 <body>
-<p style="text-align:center;">
-    <img src="Tomatoes_Own_Rev1.jpg" align="middle">
+    <p style="text-align:center;">
+        <img src="Tomatoes_Own_Rev1.jpg">
     </p>
 <h1>Tomatoes Own</h1>
 <p>I'm hosted with GitHub Pages.</p>
