--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 <title>Tomatoes Own</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
     <p style="text-align:center;">
         <img src="Tomatoes_Own_Rev1.jpg">
     </p>
-<h1>Tomatoes Own</h1>
-<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
